[package]
name = "vban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"

# This dependency is only used on Linux
alsa = "0.9.1"
clap = { version = "4.5.26", features = ["derive"] }
opus = "0.3.0"
log = "0.4.27"
simplelog = "0.12.2"
