[package]
name = "rvban"
version = "0.1.0"
edition = "2021"
description = "Libraries and binaries adapted from the VBAN specification by VB-Audio. Enhanced with Opus Codec support."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"

# This dependency is only used on Linux
alsa = {version = "0.9.1", optional = true }
clap = { version = "4.5.26", features = ["derive"] }
opus = "0.3.0"
log = "0.4.27"
simplelog = "0.12.2"
pipewire = { version = "0.8.0" , features = [ "v0_3_43", "v0_3_44"], optional = true}
gtk = { version = "0.10.1", package = "gtk4", features = ["v4_14"], optional = true }

[features]
default = []
pipewire = [ "dep:pipewire" ]
alsa = [ "dep:alsa" ]
gui = [ "dep:gtk" ]
recipient = []

[[bin]]
name = "vban_source"
required-features = ["pipewire"]

[[bin]]
name = "vban_sink"
required-features = ["recipient", "alsa"]

[[bin]]
name = "vban_gui"
required-features = ["gui", "pipewire"]